# kverbs

kverbs/: AUTHORS  ChangeLog  Makefile.in  README  VERSION  aclocal.m4  config.h.in  configure  configure.in  configure.in.in  kverbs.lsm  kverbs.spec
kverbs/admin/: Makefile  Makefile.in  am_edit
kverbs/doc/: Makefile.am  Makefile.in
kverbs/doc/kverbs/: Makefile.am  Makefile.in  index.docbook
kverbs/po/: Makefile.in  de.gmo  de.po  kverbs.pot
kverbs/src/: Makefile.am  Makefile.in  kverbs.cpp  kverbs.desktop  kverbs.h  main.cpp  verb.h
kverbs/src/modules/: Makefile.am  Makefile.in
kverbs/src/modules/english/: Makefile.am  Makefile.in  english.desktop  kverbs_english.cpp  kverbs_english.h
kverbs/src/modules/latin/: Makefile.am  Makefile.in  kverbs_latin.cpp  kverbs_latin.h  latin.desktop
kverbs/src/pics/: Makefile.am  Makefile.in
